# PoissonImageEditing

./: .gitignore  CMakeLists.txt  README.md
sample/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  Config.h  PoissonImage.cpp  PoissonImage.h  PoissonImageImpl.cpp  PoissonImageImpl.h  StopWatch.h  main.cpp
